adding checking inputs

--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,9 +1,13 @@
 <div class="FormBlock">
     <h1>Reset access</h1>
-    <form>
+    <form [formGroup]="dataForm" (ngSubmit)="onSubmit()">
         <label>
             Login
-            <input type="email" id="email" placeholder="Enter email">
+            <input type="email" id="email" placeholder="Enter email" formControlName="email">
+            <div *ngIf="dataForm.get('email')?.errors && dataForm.get('email')?.touched">
+                <p *ngIf="dataForm.get('email')?.touched" style="color: red">Поле обязательно к заполнению</p>
+                <p *ngIf="dataForm.get('email')?.errors?.['pattern']" style="color: red">Почта должна содержать собаку, точку и состоять из латинских букв</p>
+            </div>
 
             <input type="submit" id="submitBtn" value="Sign up">
         </label>
