--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,13 +1,29 @@
 <div class="FormBlock">
     <h1>Now create your account</h1>
-    <form>
+    <form [formGroup]="dataForm" (ngSubmit)="onSubmit()">
         <label>
             Login
-            <input type="email" id="email" placeholder="Enter email">
+            <input type="email" id="email" placeholder="Enter email" formControlName="email">
+            <div *ngIf="dataForm.get('email')?.errors && dataForm.get('email')?.touched">
+                <p *ngIf="dataForm.get('email')?.touched" style="color: red">Поле обязательно к заполнению</p>
+                <p *ngIf="dataForm.get('email')?.errors?.['pattern']" style="color: red">Почта должна содержать собаку, точку и состоять из латинских букв</p>
+            </div>
+
             Password
-            <input type="password" id="password" placeholder="Enter password">
+            <input type="password" id="password" placeholder="Enter password" formControlName="password">
+            <div *ngIf="dataForm.get('password')?.errors && dataForm.get('password')?.touched">
+                <p *ngIf="dataForm.get('password')?.touched" style="color: red">Поле обязательно к заполнению</p>
+                <p *ngIf="dataForm.get('password')?.errors?.['minlength']" style="color: red">Пароль должен содержать менее 8 символов</p>
+                <p *ngIf="dataForm.get('password')?.errors?.['pattern']" style="color: red">Пароль должен содержать минимум 8 символов, 1 цифру и 1 заглавный символ</p>
+            </div>
+
             Type password again
-            <input type="password" id="password" placeholder="Enter password">
+            <input type="password" id="secondPassword" placeholder="Enter password" formControlName="secondPassword">
+            <div *ngIf="dataForm.get('secondPassword')?.errors && dataForm.get('secondPassword')?.touched">
+                <p *ngIf="dataForm.get('secondPassword')?.touched" style="color: red">Поле обязательно к заполнению</p>
+                <p *ngIf="dataForm.get('secondPassword')?.errors?.['minlength']" style="color: red">Пароль должен содержать менее 8 символов</p>
+                <!-- <p *ngIf="dataForm.get('secondPassword')?.errors?.['checkPassword']" style="color: red">Пароли не совпадают</p> -->
+            </div>
 
             <input type="submit" id="submitBtn" value="Sign up">
         </label>
