--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,11 +1,20 @@
 <div class="FormBlock">
     <h1>Nice to see you again</h1>
-    <form>
+    <form [formGroup]="dataForm" (ngSubmit)="onSubmit()">
         <label>
             Login
-            <input type="email" id="email" placeholder="Email">
+            <input type="email" id="email" placeholder="Email" formControlName="email">
+            <div *ngIf="dataForm.get('email')?.errors && dataForm.get('email')?.touched">
+                <p *ngIf="dataForm.get('email')?.touched" style="color: red">Поле обязательно к заполнению</p>
+                <p *ngIf="dataForm.get('email')?.errors?.['pattern']" style="color: red">Почта должна содержать собаку, точку и состоять из латинских букв</p>
+            </div>
             Password
-            <input type="password" id="password" placeholder="Password">
+            <input type="password" id="password" placeholder="Password" formControlName="password">
+            <div *ngIf="dataForm.get('password')?.errors && dataForm.get('password')?.touched">
+                <p *ngIf="dataForm.get('password')?.touched" style="color: red">Поле обязательно к заполнению</p>
+                <p *ngIf="dataForm.get('password')?.errors?.['minlength']" style="color: red">Пароль должен содержать менее 8 символов</p>
+                <p *ngIf="dataForm.get('password')?.errors?.['pattern']" style="color: red">Пароль должен содержать минимум 8 символов, 1 цифру и 1 заглавный символ</p>
+            </div>
             <div class="passwordLink">
                 <a routerLink="/reset">Forgot password?</a>
             </div>
